preSigil-0.9.8
   Bug Fixes
    - Make sure when new empty epub3's are created that the toc does not use a doctype (Issue # 250)
    - Make GetUniqueFilenameVersion work even on Case-Insensitive filesystems (Issue #247)
    - Properly urlencode/decode all hrefs in plugin's ResultXML in launcher/PluginRunner to prevent parse errors

Sigil-0.9.7
   Bug Fixes
    - Allow tags in the svg and mathml namespace to automtically self-close if empty to help work around
         a bug in Kindlegen that will not seem to accept a closing svg image tag even though image is non-void
    - Prevent TextTab from constantly recentering page when focus is lost
    - Fix bugs in plugin basename_to_id when used with xpgt files or any unrecognized extensions
    - Fix typos in pls mimetype in plugins
    - Fix code synchronization issues among 3 places where file extensions are mapped to mimetypes
    - Fix plugin readotherfile interface to rebuild the opf on the fly only if it has been modified
    - Fix plugin validation issues with integer vs string representations of line number and character offsets
    - Fix duplicate filename in multiple directories bug when updating CSS urls
    - Fix bug in page-map.xml mimetype when "Add Existing ..." is used
    - Fix undefined behaiviour shifting signed negative values in 3rdparty libs and fix many warnings
    - Fix text vs binary file type recognition in the plugin interface (CSS and js files are text not binary) 
    - Fix too small toolbar icons on high dpi displays
    - Fix bug that caused text highlighting to get lost on some systems when doing a CSS Find & Replace.
    - Fix bug in plugin interface basename_to_id to recognize .htm extensions
    - Fix bug in epub3 semantic popups to always refect the local name of epub:type setting
    - Fix bug where creation on an HTML TOC could overwrite an existing Nav under epub3
    - Fix manifest id not starting with alpha character bug

  New Features